test/fail/stdop-invalid.rnp
1.xyz();
---
TypeError: xyz is not a valid operator
 --> fail/stdop-invalid.rnp:1:3
  |
1 | 1.xyz();
  |   ^^^ xyz is not a valid operator
  |
